--- a/kustomize/overlays/local/values-local.yaml
+++ b/kustomize/overlays/local/values-local.yaml
@@ -18,3 +18,28 @@ resources:
 
 service:
   type: ClusterIP
+
+provisioning:
+  enabled: true
+  cleanupAfterFinished:
+    enabled: true # cannot update/re-run if a completed job already exists
+    seconds: 300
+  buckets:
+  - name: squirrel-proj
+    versioning: true
+    withLock: false
+    quota:
+      type: set
+      size: 100Mi
+  policies:
+    - name: "read-write-squirrel-proj"
+      statements:
+        - resources:
+            - "arn:aws:s3:::squirrel-proj"
+            - "arn:aws:s3:::squirrel-proj/*"
+          actions:
+            - "s3:GetObject"
+            - "s3:PutObject"
+            - "s3:ListBucket"
+          effect: "Allow"
+
