Dev: Provision buckets etc... with values.yaml
Provision buckets and policies using the enviroment specific values.yaml file
for the scilifelab-2-dev environment.

--- a/kustomize/overlays/scilifelab-2-dev/kustomization.yaml
+++ b/kustomize/overlays/scilifelab-2-dev/kustomization.yaml
@@ -12,5 +12,6 @@ helmCharts:
   releaseName: minio
   repo: oci://registry-1.docker.io/bitnamicharts
   version: 16.0.8
+  includeCRDs: true
   additionalValuesFiles:
     - values-scilifelab-2-dev.yaml
