--- a/kustomize/overlays/scilifelab-2-dev/kustomization.yaml
+++ b/kustomize/overlays/scilifelab-2-dev/kustomization.yaml
@@ -15,3 +15,5 @@ helmCharts:
   includeCRDs: true
   additionalValuesFiles:
     - values-scilifelab-2-dev.yaml
+    - minio-config/buckets.yaml
+    - minio-config/policies.yaml
