--- a/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
+++ b/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
@@ -10,3 +10,8 @@ provisioning:
       quota:
         type: set
         size: 10Mi
+    - name: version-bucket-state
+      versioning: true
+      quota:
+        type: set
+        size: 100Mi
