--- a/experiments/version_entire_bucket/sample_files/.bucket_versions.yaml
+++ b/experiments/version_entire_bucket/sample_files/.bucket_versions.yaml
@@ -1,7 +1,7 @@
 versions:
-  0.1.0:
+  v0.1.0:
     description: Initial version
-    timestamp: '2025-05-14T09:31:34.258876+00:00'
+    timestamp: '2025-05-14T14:28:17.861255+00:00'
   v0.1.1:
-    description: from argparse :)
-    timestamp: '2025-05-14T09:31:38.349832+00:00'
+    description: made with argparse :)
+    timestamp: '2025-05-14T14:29:37.772554+00:00'
