add test buckets+policies+groups for us devs
For testing.

A user account has been created for each dev on the console and now
we are part of the same group.

--- a/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
+++ b/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
@@ -1,12 +1,12 @@
 provisioning:
   buckets:
+    - name: version-bucket-state
+      versioning: true
+      quota:
+        type: set
+        size: 100Mi
     - name: squirrel-proj
       versioning: true
       quota:
         type: set
         size: 1Gi
-    - name: kustomize-proj
-      versioning: true
-      quota:
-        type: set
-        size: 10Mi
