--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
     "typer>=0.15.4",
+    "pandas>=2.2.3",
 ]
 
 [build-system]
