Give each dev there own bucket to test out

--- a/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
+++ b/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
@@ -10,3 +10,14 @@ provisioning:
       quota:
         type: set
         size: 1Gi
+    - name: apfuentes-proj
+      versioning: true
+      quota:
+        type: set
+        size: 100Mi
+    - name: kwentine-proj
+      versioning: true
+      quota:
+        type: set
+        size: 100Mi
+
