Update buckets/policies/groups for demo
have kustomize build, k applied these changes.

--- a/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
+++ b/kustomize/overlays/scilifelab-2-dev/minio-config/buckets.yaml
@@ -1,6 +1,11 @@
 provisioning:
   buckets:
-    - name: version-bucket-state
+    - name: ahm-console-demo
+      versioning: true
+      quota:
+        type: set
+        size: 100Mi
+    - name: ahm-cli-demo
       versioning: true
       quota:
         type: set
@@ -20,4 +25,8 @@ provisioning:
       quota:
         type: set
         size: 100Mi
+
+
+
+
 
