refactor src to have a cli+webapi entrypoint
With uv sync command both entrypoints can now be used.
e.g.:

divbase-cli
divbase-api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pyyaml>=6.0.2",
     "typer>=0.15.4",
     "pandas>=2.2.3",
+    "fastapi>=0.115.12",
+    "uvicorn>=0.34.3",
 ]
 
 [build-system]
@@ -18,4 +20,5 @@ requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-divbase-tools = "divbase_tools.__main__:app"
+divbase-cli = "divbase_tools.divbase_cli:main"
+divbase-api = "divbase_tools.divbase_api:main"
