basic proj structure with 1 pytest test

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@ __pycache__/
 
 .vscode/
 
-experiments/version_entire_bucket/downloads/*.txt
+# project specific files
+/sample_metadata.tsv
+/*.vcf.gz
