--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=2.2.3",
     "fastapi>=0.115.12",
     "uvicorn>=0.34.3",
+    "pytest>=8.4.0",
 ]
 
 [build-system]
