--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "uvicorn>=0.34.3",
     "pytest>=8.4.0",
+    "celery>=5.5.3",
 ]
 
 [build-system]
