Run bcftools query in docker-compose
Also refactored the bcftools queries commands to be stored in a
JSON-like structure, which might be easier to maintain in the future.

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   tools:
     image: "bcftools-image"
+    volumes:
+      - ..:/app
     build:
       context: .
       dockerfile: tools.dockerfile
