--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -31,5 +31,17 @@ services:
     volumes:
       - ../src:/app/src
       - /var/run/docker.sock:/var/run/docker.sock
+  flower:
+    image: mher/flower:0.9.7
+    ports:
+      - 5555:5555
+    depends_on:
+      - redis
+      - rabbitmq
+    environment:
+      - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - FLOWER_PORT=5555
+    command: ["flower", "--broker=pyamqp://guest@rabbitmq:5672//", "--persistent=True"]
 volumes:
   redis-data:
