--- a/docker/minio/docker-compose.yaml
+++ b/docker/minio/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   minio:
-    image: minio/minio:latest
+    image: bitnami/minio:2025.5.24
     ports:
       - "9000:9000"
       - "9001:9001"
