--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pytest>=8.4.0",
     "celery>=5.5.3",
     "redis>=4.5.0",
+    "requests>=2.32.4",
+    "flower>=2.0.0",
 ]
 
 [build-system]
