Add integration test for bcftools_pipe_task
Requires a local docker-compose setup to be running.
Tests the `bcftools_pipe_task` with a VCF file fixture, and containers
with celery worker, rabbitmq broker and redis backend. Returns the
merged VCF file to the repo root. Does NOT handle downloading of missing
files (that logic is in the query_cli.py layer).

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
     volumes:
       - ../src:/app/src
       - ..:/app
+      - ../tests/fixtures:/app/tests/fixtures 
   flower:
     build:
       context: ..
