--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 testpaths = tests
 filterwarnings =
     ignore:datetime\.datetime\.utcnow\(\) is deprecated:DeprecationWarning:botocore\.auth
+addopts = --import-mode=importlib
