Add test for pipe_query in --async False mode
Performs the tsv query, but mocks downloading of files from bucket by
copying files from fixtures instead. Does not use the celery task queue.

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     volumes:
       - ../src:/app/src
       - ..:/app
-      - ../tests/fixtures:/app/tests/fixtures 
+      - ../tests/fixtures:/app/test_fixtures
   flower:
     build:
       context: ..
