--- a/tests/queries/pytest.ini
+++ b/tests/queries/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
+    unit: marks unit tests
     integration: marks tests components, modules, or services are tested together to verify they work as expected when combined.
+    e2e: marks tests that verify the end-to-end functionality of the application, ensuring all components work together as intended.
