Update query tests before merge

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,7 @@ testpaths = tests
 filterwarnings =
     ignore:datetime\.datetime\.utcnow\(\) is deprecated:DeprecationWarning:botocore\.auth
 addopts = --import-mode=importlib
+markers =
+    unit: marks unit tests
+    integration: marks tests components, modules, or services are tested together to verify they work as expected when combined.
+    e2e: marks tests that verify the end-to-end functionality of the application, ensuring all components work together as intended.
