--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     volumes:
       - ../src:/app/src
       - ..:/app
-      - ../tests/fixtures:/app/test_fixtures
+      - ../tests/fixtures:/app/tests/fixtures
   flower:
     build:
       context: ..
