--- a/docker/job_system_compose.yaml
+++ b/docker/job_system_compose.yaml
@@ -2,10 +2,20 @@ name: divbase-job-system
 services:
   rabbitmq:
     image: "rabbitmq:alpine"
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     ports:
       - 5672:5672
   redis:
     image: redis:alpine
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     ports:
       - 6379:6379
     volumes:
@@ -16,8 +26,10 @@ services:
       context: .. 
       dockerfile: docker/worker.dockerfile
     depends_on:
-      - rabbitmq
-      - redis
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -31,20 +43,22 @@ services:
     ports:
       - 5555:5555
     depends_on:
-      - redis
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - FLOWER_PORT=5555
       - FLOWER_BASIC_AUTH=floweradmin:badpassword
     command: [
-      "--broker=pyamqp://guest@rabbitmq:5672//", 
+      "flower", 
       "--persistent=True",
       "--db=/data/flower.db",
       ]
     volumes:
-    - flower-data:/data
+      - flower-data:/data
 volumes:
   redis-data:
   flower-data:
