--- a/docker/job_system_compose.tests.yaml
+++ b/docker/job_system_compose.tests.yaml
@@ -2,13 +2,29 @@ name: divbase-job-system-tests
 services:
   rabbitmq:
     ports: !override # port mapping is additive when merging compose files, unless overridden like this
-      - 5673:5672 #host:container. change the host port for the testing env
+      - 5673:5672 #host:container. for the testing env, it's enough to change the host port. The container port remains the same since it is for internal container communication.
   redis:
     ports: !override
       - 6380:6379
+    volumes: !reset [] # reset to avoid conflicts with the redis settings in the main compose file
+    command: [
+        "redis-server",
+        "--appendonly", "yes",
+        "--dir", "/data/redis_data"
+      ]
+    tmpfs:
+      - /data/redis_data
   worker:
     volumes:
       - ../tests/fixtures:/app/tests/fixtures
   flower:
     ports: !override
       - 5556:5555
+    volumes: !reset []
+    command: [
+      "flower", 
+      "--persistent=True",
+      "--db=/data/flower_data/flower.db",
+      ]
+    tmpfs:
+      - /data/flower_data
