--- a/docker/divbase_compose.tests.yaml
+++ b/docker/divbase_compose.tests.yaml
@@ -1,4 +1,4 @@
-name: divbase-job-system-tests
+name: divbase-tests
 services:
   rabbitmq:
     ports: !override # port mapping is additive when merging compose files, unless overridden like this
@@ -15,6 +15,13 @@ services:
   flower:
     ports: !override
       - 5556:5555
+    volumes: !reset []
+    tmpfs:
+      - /data/
+  minio:
+    ports: !override
+      - "9002:9000"
+      - "9003:9001"
     volumes: !reset []
     tmpfs:
       - /data/
