--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -1,4 +1,4 @@
-name: divbase-job-system
+name: divbase
 services:
   rabbitmq:
     image: "rabbitmq:alpine"
@@ -69,6 +69,26 @@ services:
       ]
     volumes:
       - flower-data:/data
+  minio:
+    image: bitnami/minio:2025.5.24
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: badpassword
+    command: server --console-address ":9001" /data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    user: "0:0" #for local dev, run minio volume as root to avoid permission issues
+    # tmpfs:
+    #   - /data
+    volumes:
+      - minio-data:/data
 volumes:
   redis-data:
   flower-data:
+  minio-data:
