Add fastAPI container to docker-compose
Built with the goal to make divbase-cli jobs status work. (divbase-cli
jobs submit will fail since it does not support downloading of files
from minio yet).

For the fastAPI container, use the host 0.0.0.0 for the uvicorn
server to ensure it is accessible from outside the container. Might want
to refine this in divbase_api.py later to reduce duplicatation/overides.

For fastAPI to connect to the flower container in the stack, refer to it
with the env var http://flower:5555 instead of localhost:5555. Keep
localhost as a fallback in task_history.py so ensure that divbase-cli
query task-status still work (does not go via fastAPI).

Add a health endpoint to API that returns {"status": "ok"} for docker
compose healthcheck.

--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -84,10 +84,29 @@ services:
       timeout: 3s
       retries: 5
     user: "0:0" #for local dev, run minio volume as root to avoid permission issues
-    # tmpfs:
-    #   - /data
     volumes:
       - minio-data:/data
+  fastapi:
+    build:
+      context: ..
+      dockerfile: docker/fastapi.dockerfile
+    ports:
+      - 8000:8000
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    environment:
+    - FLOWER_HOST=http://flower:5555 # Use the service name as the host for fastAPI to access Flower
+    - FLOWER_USER=floweradmin
+    - FLOWER_PASSWORD=badpassword
+    - DIVBASE_USER=divbase_user_set_in_compose_file
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 volumes:
   redis-data:
   flower-data:
