--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -9,6 +9,8 @@ services:
       retries: 5
     ports:
       - 5672:5672
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq #to avoid anynymous volumes being created
   redis:
     image: redis:alpine
     healthcheck:
@@ -86,6 +88,8 @@ services:
     user: "0:0" #for local dev, run minio volume as root to avoid permission issues
     volumes:
       - minio-data:/data
+      - minio-bitnami-data:/bitnami/minio/data #to avoid anynymous volumes being created
+      - minio-certs:/certs #to avoid anynymous volumes being created
   fastapi:
     build:
       context: ..
@@ -108,6 +112,9 @@ services:
       redis:
         condition: service_healthy
 volumes:
+  rabbitmq-data:
   redis-data:
   flower-data:
   minio-data:
+  minio-bitnami-data:
+  minio-certs:
