celery task that dloads input + uploads output
Celery task does all steps for the metadata query bcftools command including downloding input and uploading results file.

// rebuild entire stack to be sure
docker compose -f docker/divbase_compose.yaml down ; docker compose -f docker/divbase_compose.yaml build ; docker compose -f docker/divbase_compose.yaml up -d

// submit task via API
divbase-cli jobs submit --tsv-filter "Area:West of Ireland,Northern Portugal;Sex:F" --command "view -s SAMPLES; view -r 21:15000000-25000000" --bucket-name "test"

// see status.
divbase-cli jobs status

// Open up the bucket and you'll see the merged.vcf file now present.

--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -41,9 +41,10 @@ services:
     environment:
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DIVBASE_ACCESS_KEY=minioadmin
+      - DIVBASE_SECRET_KEY=badpassword
     volumes:
       - ../src:/app/src
-      - ..:/app
   flower:
     build:
       context: ..
@@ -79,6 +80,7 @@ services:
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: badpassword
+      MINIO_DEFAULT_BUCKETS: test2:versioned
     command: server --console-address ":9001" /data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -106,6 +108,8 @@ services:
     - FLOWER_USER=floweradmin
     - FLOWER_PASSWORD=badpassword
     - DIVBASE_USER=divbase_user_set_in_compose_file
+    - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
+    - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       rabbitmq:
         condition: service_healthy
