Use compose "watch" for changes in fastapi docker
Don't need to rebuild image every time, changes just synced across

--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -104,7 +104,21 @@ services:
       context: ..
       dockerfile: docker/fastapi.dockerfile
     ports:
-      - 8000:8000
+      - "8000:8000"
+    command: ["fastapi", "dev", "--host", "0.0.0.0", "/app/src/divbase_tools/divbase_api.py"]
+    develop:
+      # Create a `watch` configuration to update the app
+      # https://docs.docker.com/compose/file-watch/#compose-watch-versus-bind-mounts
+      watch:
+        # Sync the working directory with the `/app` directory in the container
+        - action: sync
+          path: ../src
+          target: /app/src
+          ignore:
+            - .venv/
+        # Rebuild the image if dependencies change by checking uv.lock
+        - action: rebuild
+          path: ../uv.lock
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 5s
