don't include watch settings in test mode

--- a/docker/divbase_compose.tests.yaml
+++ b/docker/divbase_compose.tests.yaml
@@ -12,15 +12,18 @@ services:
   worker-quick:
     volumes:
       - ../tests/fixtures:/app/tests/fixtures
+    develop: !reset []
   worker-long:
     volumes:
       - ../tests/fixtures:/app/tests/fixtures
+    develop: !reset []
   flower:
     ports: !override
       - 5556:5555
     volumes: !reset []
     tmpfs:
       - /data/
+    develop: !reset []
   minio:
     ports: !override
       - "9002:9000"
@@ -31,3 +34,4 @@ services:
   fastapi:
     ports: !override
       - 8001:8000
+    develop: !reset []
