--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests>=2.32.4",
     "flower>=2.0.0",
     "httpx>=0.28.1",
+    "pre-commit>=3.7.0",
 ]
 
 [build-system]
