--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dependencies = [
     "requests>=2.32.4",
     "flower>=2.0.0",
     "httpx>=0.28.1",
+    "pre-commit>=3.7.0",
+    "scipy>=1.16.0",
+    "matplotlib>=3.10",
+    "seaborn>=0.13",
+    "statsmodels>=0.14.4"
 ]
 
 [build-system]
