Use optional-dependencies for benchmarking libs
Some of these took several minutes to install upon each full reset of
the docker compose stack when using

docker compose -f docker/divbase_compose.yaml down -v && \
    docker compose -f docker/divbase_compose.yaml up --build -d;

To install them, use:
uv pip install .[benchmarking]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,15 @@ dependencies = [
     "flower>=2.0.0",
     "httpx>=0.28.1",
     "pre-commit>=3.7.0",
+
+]
+
+[project.optional-dependencies]
+benchmarking = [
     "scipy>=1.16.0",
     "matplotlib>=3.10",
     "seaborn>=0.13",
-    "statsmodels>=0.14.4"
+    "statsmodels>=0.14.4",
 ]
 
 [build-system]
