--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -81,7 +81,7 @@ services:
     volumes:
       - flower-data:/data
   minio:
-    image: bitnami/minio:2025.5.24
+    image: bitnamilegacy/minio:2025.7.23-debian-12-r5
     ports:
       - "9000:9000"
       - "9001:9001"
