Set divbase-* modules as known first party in ruff
Gives expected isort behavior, where developer imports are grouped after other imports.

--- a/ruff.toml
+++ b/ruff.toml
@@ -20,3 +20,11 @@ lint.ignore = [
 
 [lint.flake8-bugbear]
 extend-immutable-calls = ["typer.Argument", "typer.Option"]
+
+[lint.isort]
+known-first-party = [
+    "divbase_cli",
+    "divbase_lib", 
+    "divbase_worker",
+    "divbase_api",
+]
