--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "uvicorn>=0.34.3",
     "httpx>=0.28.1",
+    "sqlalchemy>=2.0.43",
     "divbase-lib",
     "divbase-worker",
 ]
