--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -146,7 +146,7 @@ services:
       - "5432:5432"
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-d", "divbase_db"]
+      test: ["CMD-SHELL", "pg_isready -U divbase_user -d divbase_db"]
       interval: 10s
       retries: 5
       start_period: 30s
