--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "divbase-lib",
     "divbase-worker",
     "asyncpg>=0.30.0",
+    "passlib[bcrypt]>=1.7.4",
 ]
 
 [build-system]
