--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -133,6 +133,7 @@ services:
     - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
     - CELERY_RESULT_BACKEND=redis://redis:6379/0
     - DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@postgres:5432/divbase_db
+    - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
     depends_on:
       rabbitmq:
         condition: service_healthy
