--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "divbase-worker",
     "asyncpg>=0.30.0",
     "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.10.1",
 ]
 
 [build-system]
