--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "passlib[bcrypt]>=1.7.4",
     "pyjwt>=2.10.1",
+    "bcrypt>=4.3.0",
 ]
 
 [build-system]
