update pre-commit hooks to check packages dir

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,8 +28,8 @@ repos:
     # Run the linter.
     - id: ruff-check
       args: [ --fix ]
-      files: '^(src|tests)/.*'
+      files: '^(packages|tests)/.*'
     # Run the formatter.
     - id: ruff-format
-      files: '^(src|tests)/.*'
+      files: '^(packages|tests)/.*'
 
